--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,17 +43,6 @@ setup_permissions(
   ]
 )
 
-# If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
-# because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
-#
-# To fix this you can also exclude `react-native-flipper` using a `react-native.config.js`
-# ```js
-# module.exports = {
-#   dependencies: {
-#     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
-# ```
-# flipper_config = ENV["NO_FLIPPER"] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
-
 linkage = ENV.fetch( "USE_FRAMEWORKS", nil )
 unless linkage.nil?
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
@@ -65,11 +54,6 @@ target "iNaturalistReactNative" do
 
   use_react_native!(
     path: config[:reactNativePath],
-    # Enables Flipper.
-    #
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
-    # you should disable the next line.
-    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     app_path: "#{Pod::Config.instance.installation_root}/.."
   )
@@ -100,7 +84,8 @@ target "iNaturalistReactNative" do
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      mac_catalyst_enabled: false
+      mac_catalyst_enabled: false,
+      # :ccache_enabled => true
     )
     # Add these lines for Xcode 14 builds
     installer.generated_projects.each do | project |
