Cherry pick all RN upgrade commits from RN 0.74.7 branch

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-native-community/slider": "^4.5.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.7.2",
+    "@react-native/eslint-config": "^0.74.83",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/drawer": "^7.3.12",
     "@react-navigation/elements": "^2.4.2",
@@ -86,7 +87,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^14.1.0",
-    "react-native": "0.73.11",
+    "react-native": "^0.74.7",
     "react-native-animated-dots-carousel": "^2.0.0",
     "react-native-audio-recorder-player": "^3.6.7",
     "react-native-bouncy-checkbox": "^3.0.7",
@@ -143,9 +144,9 @@
     "@babel/runtime": "^7.24.4",
     "@faker-js/faker": "^8.4.1",
     "@fluent/syntax": "^0.19.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
+    "@react-native/babel-preset": "^0.74.83",
+    "@react-native/metro-config": "^0.74.83",
+    "@react-native/typescript-config": "^0.74.83",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.5",
