--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "test:memory": "jest --runInBand --logHeapUsage",
     "lint": "npm run lint:eslint && npm run lint:flow && npm run lint:rubocop",
     "lint:fix": "npm run lint:eslint:fix && npm run lint:flow && npm run lint:rubocop:fix",
+    "lint:staged:fix": "npx lint-staged && npm run lint:flow",
     "lint:eslint": "eslint .",
-    "lint:eslint:fix": "npx lint-staged",
+    "lint:eslint:fix": "eslint . --fix",
     "lint:flow": "flow check",
     "lint:rubocop": "bundle exec rubocop",
     "lint:rubocop:fix": "bundle exec rubocop -A",
@@ -207,6 +208,9 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --cache --fix --max-warnings=0 --cache-location .eslintcache"
+    ],
+    "*.rb": [
+      "bundle exec rubocop --force-exclusion --parallel"
     ]
   }
 }
