fix: assume all InfoList.xcstrings strings are translated; disable skip_untranslated_strings

--- a/.github/workflows/crowdin-pull.yml
+++ b/.github/workflows/crowdin-pull.yml
@@ -56,7 +56,7 @@ jobs:
           upload_translations: false
           # Download options
           download_translations: true
-          skip_untranslated_strings: true
+          # skip_untranslated_strings: true
           export_only_approved: true
           # Without this, the action will force push changes to the branch
           # before we get a chance to normalize and validate in the next
