--- a/ios/iNaturalistReactNative/iNaturalistReactNativeRelease.entitlements
+++ b/ios/iNaturalistReactNative/iNaturalistReactNativeRelease.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:www.inaturalist.org</string>
+		<string>applinks:www.inaturalist.org?mode=developer</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
