--- a/.github/workflows/crowdin-pull.yml
+++ b/.github/workflows/crowdin-pull.yml
@@ -57,7 +57,8 @@ jobs:
           # Download options
           download_translations: true
           # skip_untranslated_strings: true
-          export_only_approved: true
+          # Experimenting with using the results of machine translation
+          export_only_approved: false
           # Without this, the action will force push changes to the branch
           # before we get a chance to normalize and validate in the next
           # step
