--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "^4.10.0",
+    "react-native-screens": "4.4.0",
     "react-native-sensitive-info": "^6.0.0-alpha.9",
     "react-native-share-menu": "github:inaturalist/react-native-share-menu#iNaturalistReactNative",
     "react-native-store-review": "^0.4.3",
