--- a/package.json
+++ b/package.json
@@ -111,7 +111,6 @@
     "react-native-mmkv": "^2.12.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-network-logger": "^1.15.0",
     "react-native-open-maps": "^0.4.3",
     "react-native-orientation-locker": "github:wonday/react-native-orientation-locker",
     "react-native-paper": "^5.12.3",
@@ -135,19 +134,16 @@
     "react-native-worklets-core": "^1.3.3",
     "realm": "^20.1.0",
     "sanitize-html": "^2.13.0",
-    "ts-jest": "^29.1.2",
     "uuid": "^11.0.5",
     "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision#924a801b224be6243679c8237fbe0ec58ece0ac9",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.1",
-    "@babel/preset-typescript": "^7.24.1",
     "@babel/runtime": "^7.24.4",
     "@faker-js/faker": "^8.4.1",
     "@fluent/syntax": "^0.19.0",
     "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@tanstack/eslint-plugin-query": "^5.28.11",
@@ -161,6 +157,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@types/sanitize-html": "^2.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
@@ -176,6 +173,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-module-resolver": "^1.5.0",
+    "eslint-plugin-react-native": "^5.0.0",
     "eslint-plugin-react-native-a11y": "^3.5.1",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-testing-library": "^6.2.0",
