--- a/ios/Podfile
+++ b/ios/Podfile
@@ -84,7 +84,7 @@ target "iNaturalistReactNative" do
     react_native_post_install(
       installer,
       config[:reactNativePath],
-      mac_catalyst_enabled: false,
+      mac_catalyst_enabled: false
       # :ccache_enabled => true
     )
     # Add these lines for Xcode 14 builds
