--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
+      android:supportsRtl="true"
       android:requestLegacyExternalStorage="true"
       android:networkSecurityConfig="@xml/network_security_config">
       <meta-data android:name="com.google.android.geo.API_KEY" android:value="${GMAPS_API_KEY}" />
