--- a/package.json
+++ b/package.json
@@ -128,10 +128,10 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-vision-camera": "4.5.2",
+    "react-native-vision-camera": "^4.6.4",
     "react-native-volume-manager": "^1.10.0",
     "react-native-webview": "^13.8.4",
-    "react-native-worklets-core": "1.3.3",
+    "react-native-worklets-core": "^1.5.0",
     "realm": "^20.1.0",
     "sanitize-html": "^2.13.0",
     "uuid": "^11.0.5",
