--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "react-native-exif-reader": "github:inaturalist/react-native-exif-reader#v0.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-geocoder-reborn": "^0.9.0",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "2.18.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "github:inaturalist/react-native-image-picker",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
