--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "react-native-orientation-locker": "github:wonday/react-native-orientation-locker",
     "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
-    "react-native-reanimated": "^3.11.0",
+    "react-native-reanimated": "3.15.5",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-render-html": "^6.3.4",
     "react-native-restart": "^0.0.27",
@@ -135,7 +135,7 @@
     "realm": "^20.1.0",
     "sanitize-html": "^2.13.0",
     "uuid": "^11.0.5",
-    "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision#be7e5faed370bf307a062e728b5cf80b9c7292fe",
+    "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision#3c4a3246b5672ec642711b6d41f7484043232dfb",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
