--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^14.1.0",
-    "react-native": "0.75.5",
+    "react-native": "0.76.9",
     "react-native-animated-dots-carousel": "^2.0.0",
     "react-native-audio-recorder-player": "^3.6.7",
     "react-native-bouncy-checkbox": "^3.0.7",
@@ -139,14 +139,19 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.1",
-    "@babel/runtime": "^7.24.4",
+    "@babel/runtime": "^7.25.0",
     "@faker-js/faker": "^8.4.1",
     "@fluent/syntax": "^0.19.0",
-    "@react-native/babel-preset": "0.75.5",
-    "@react-native/eslint-config": "0.75.5",
-    "@react-native/metro-config": "0.75.5",
-    "@react-native/typescript-config": "0.75.5",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.76.9",
+    "@react-native/eslint-config": "0.76.9",
+    "@react-native/metro-config": "0.76.9",
+    "@react-native/typescript-config": "0.76.9",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.4.5",
