--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-vision-camera": "4.5.2",
+    "react-native-vision-camera": "^4.7.0",
     "react-native-volume-manager": "^1.10.0",
     "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-webview": "^13.8.4",
