--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,7 @@
 # frozen_string_literal: true
 
 # Disable New Architecture
-ENV['RCT_NEW_ARCH_ENABLED'] = '0'
+ENV["RCT_NEW_ARCH_ENABLED"] = "0"
 
 # setup instructions from https://www.npmjs.com/package/react-native-permissions
 def node_require( script )
