--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@sayem314/react-native-keep-awake": "^1.3.1",
     "@shopify/flash-list": "^1.8.3",
     "@tanstack/react-query": "5.55.4",
+    "@types/react-dom": "^19.1.7",
     "apisauce": "^3.1.0",
     "classnames": "^2.5.1",
     "date-fns": "^3.0.0",
