--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "@react-native/typescript-config": "0.77.2",
     "@tanstack/eslint-plugin-query": "^5.28.11",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "13.0.0",
+    "@testing-library/react-native": "^13.2.2",
     "@types/jest": "^29.5.13",
     "@types/jsrsasign": "^10.5.15",
     "@types/lodash": "^4.17.14",
