--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "react-native-vision-camera": "^4.7.0",
     "react-native-volume-manager": "^1.10.0",
     "react-native-webview": "^13.15.0",
-    "react-native-worklets-core": "1.5.0",
+    "react-native-worklets-core": "^1.6.2",
     "realm": "^20.1.0",
     "sanitize-html": "^2.13.0",
     "uuid": "^11.1.0",
