--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "*": ["src/*"],
-      "appConstants": "src/appConstants",
+      "appConstants": ["src/appConstants"],
       "api": ["src/api"],
       "components": ["src/components"],
       "dictionaries": ["src/dictionaries"],
