--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "nock": "^13.5.6",
     "node-downloader-helper": "^2.1.9",
     "patch-package": "^8.0.0",
+    "prettier": "^3.6.2",
     "react-native-clean-project": "^4.0.3",
     "react-native-config-node": "^0.0.3",
     "react-test-renderer": "19.0.0",
