--- a/package.json
+++ b/package.json
@@ -194,6 +194,7 @@
     "jest-slow-test-reporter": "^1.0.0",
     "nock": "^13.5.6",
     "node-downloader-helper": "^2.1.9",
+    "npm-run-all2": "^8.0.4",
     "patch-package": "^8.0.0",
     "prettier": "^3.6.2",
     "react-native-clean-project": "^4.0.3",
