Add prettier lint script to check

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint:rubocop": "bundle exec rubocop",
     "lint:rubocop:fix": "bundle exec rubocop -A",
     "lint:tsc": "tsc --allowJs false --noEmit",
+    "lint:format": "prettier --experimental-cli --cache --check .",
     "postinstall": "husky && patch-package",
     "translate": "node src/i18n/i18ncli.js build",
     "prepare-fastlane-metadata": "node src/i18n/i18ncli.js prepare-fastlane-metadata",
