--- a/package.json
+++ b/package.json
@@ -199,6 +199,7 @@
     "npm-run-all2": "^8.0.4",
     "patch-package": "^8.0.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-packagejson": "^2.5.19",
     "react-native-clean-project": "^4.0.3",
     "react-native-config-node": "^0.0.3",
     "react-test-renderer": "19.0.0",
