--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "patch-package": "^8.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.19",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "react-native-clean-project": "^4.0.3",
     "react-native-config-node": "^0.0.3",
     "react-test-renderer": "19.0.0",
