Use linting and checks in parallel

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test": "jest tests/integration && jest tests/unit tests/helpers",
     "test:clear": "jest --clearCache",
     "test:memory": "jest --runInBand --logHeapUsage",
-    "lint": "npm run lint:eslint && npm run lint:flow && npm run lint:rubocop",
-    "lint:fix": "npm run lint:eslint:fix && npm run lint:flow && npm run lint:rubocop:fix",
+    "lint": "npm-run-all --parallel lint:eslint lint:flow lint:rubocop",
+    "lint:fix": "npm-run-all lint:eslint:fix lint:flow lint:rubocop:fix",
     "lint:staged:fix": "npx lint-staged && npm run lint:flow",
     "lint:eslint": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
