--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,8 @@ yarn-error.log
 
 # Secrets file
 .env*
+ios/GoogleService-Info.staging.plist
+ios/GoogleService-Info.plist
 
 # Fastlane files
 *.zip
