--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,8 +10,8 @@ buildscript {
         targetSdkVersion = 35
         ndkVersion = "27.1.12297006"
         kotlinVersion = "2.0.21"
-        // This specifies which tensorflow-lite version to use for our vision-plugin.
-        tensorflowVersion = "2.17.0"
+        // This specifies which LiteRT version to use for our vision-plugin.
+        litertVersion = "2.17.0"
     }
     repositories {
         google()
