--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "react-native-geocoder-reborn": "^0.9.0",
     "react-native-gesture-handler": "2.22.1",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-image-picker": "github:inaturalist/react-native-image-picker",
+    "react-native-image-picker": "github:inaturalist/react-native-image-picker#3c3571f29ad59c8f5a1c0fb6504a585a921cf58d",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.5.2",
