--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,8 +44,10 @@ setup_permissions(
 )
 
 use_frameworks! linkage: :static
-# // Required for react-native-firebase: https://rnfirebase.io/#configure-firebase-with-ios-credentials-react-native--077
+# rubocop:disable Style/GlobalVars
+# Required for react-native-firebase: https://rnfirebase.io/#configure-firebase-with-ios-credentials-react-native--077
 $RNFirebaseAsStaticFramework = true
+# rubocop:enable Style/GlobalVars
 
 target "iNaturalistReactNative" do
   config = use_native_modules!
