try iPhone 15 and also run list devices available to this runner

--- a/.github/workflows/e2e_ios.yml
+++ b/.github/workflows/e2e_ios.yml
@@ -37,6 +37,9 @@ jobs:
       with:
         fetch-depth: 1
 
+    - name: List devices
+      run: xcrun simctl list devices
+
     - name: Install Node.js, NPM and Yarn
       uses: actions/setup-node@v4
       with:
