Basic React share sheet setup
Following the setup here: https://github.com/inaturalist/react-native-share-menu/blob/f5805e92082fd79f251cefbe86759201589f6e9a/SHARE_EXTENSION_VIEW.md

--- a/ios/iNaturalistReactNative-ShareExtension/Info.plist
+++ b/ios/iNaturalistReactNative-ShareExtension/Info.plist
@@ -21,5 +21,31 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
 	</dict>
+	<key>ReactShareViewBackgroundColor</key>
+	<dict>
+			<key>Red</key>
+			<integer>1</integer>
+			<key>Green</key>
+			<integer>1</integer>
+			<key>Blue</key>
+			<integer>1</integer>
+			<key>Alpha</key>
+			<integer>1</integer>
+			<key>Transparent</key>
+			<false/>
+	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true/>
+			<key>NSExceptionDomains</key>
+			<dict>
+					<key>localhost</key>
+					<dict>
+							<key>NSExceptionAllowsInsecureHTTPLoads</key>
+							<true/>
+					</dict>
+			</dict>
+	</dict>
 </dict>
 </plist>
