--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "lint:staged:fix": "npx lint-staged && npm run lint:flow",
     "lint:eslint": "eslint .",
     "lint:eslint:fix": "eslint . --fix",
-    "lint:flow": "flow check",
+    "lint:flow": "echo skipping flow",
     "lint:rubocop": "bundle exec rubocop",
     "lint:rubocop:fix": "bundle exec rubocop -A",
     "lint:tsc": "tsc --allowJs false --noEmit",
     "postinstall": "husky && patch-package",
     "translate": "node src/i18n/i18ncli.js build",
     "prepare-fastlane-metadata": "node src/i18n/i18ncli.js prepare-fastlane-metadata",
-    "e2e:android": "npm run e2e:build:android && npm run e2e:test:android",
-    "e2e:build:android": "MOCK_MODE=e2e npx detox build --configuration android.release",
-    "e2e:build:ios": "MOCK_MODE=e2e npx detox build --configuration ios.release",
+    "e2e:android": "npm run e2e:build:android && npm run  ",
+    "e2e:build:android": "MOCK_MODE=e2e npx detox build --configuration android.debug",
+    "e2e:build:ios": "MOCK_MODE=e2e npx detox build --configuration ios.debug",
     "e2e:build": "npm run e2e:build:ios && npm run e2e:build:android",
     "e2e:ios": "npm run e2e:build:ios && npm run e2e:test:ios",
-    "e2e:test:android": "MOCK_MODE=e2e npx detox test --configuration android.release",
-    "e2e:test:ios": "MOCK_MODE=e2e npx detox test --configuration ios.release",
+    "e2e:test:android": "MOCK_MODE=e2e npx detox test --configuration android.debug",
+    "e2e:test:ios": "MOCK_MODE=e2e npx detox test --configuration ios.debug",
     "e2e:ios:test": "npm run e2e:test:ios",
     "e2e:ios:build": "npm run e2e:build:ios",
     "e2e:android:test": "npm run e2e:test:android",
@@ -57,6 +57,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-native-oh-tpl/react-native-mail": "^6.1.1-0.0.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/common": "^12.3.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -107,7 +108,6 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.5.2",
     "react-native-logs": "^5.3.0",
-    "react-native-mail": "github:chirag04/react-native-mail",
     "react-native-maps": "1.20.1",
     "react-native-mmkv": "^3.3.3",
     "react-native-modal": "^14.0.0-rc.1",
@@ -129,13 +129,13 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.7.2",
-    "react-native-volume-manager": "^1.10.0",
+    "react-native-volume-manager": "^1.4.0",
     "react-native-webview": "^13.15.0",
     "react-native-worklets-core": "^1.6.2",
     "realm": "20.1.0",
     "sanitize-html": "^2.13.0",
     "uuid": "^11.1.0",
-    "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision#60437a7a9c78efa2501e0009a79141b19ad347ea",
+    "vision-camera-plugin-inatvision": "file:../vision-camera-plugin-inatvision",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
