--- a/package.json
+++ b/package.json
@@ -129,13 +129,13 @@
     "react-native-svg-transformer": "^1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vision-camera": "^4.7.2",
-    "react-native-volume-manager": "^1.4.0",
+    "react-native-volume-manager": "^2.0.8",
     "react-native-webview": "^13.15.0",
     "react-native-worklets-core": "^1.6.2",
     "realm": "20.1.0",
     "sanitize-html": "^2.13.0",
     "uuid": "^11.1.0",
-    "vision-camera-plugin-inatvision": "file:../vision-camera-plugin-inatvision",
+    "vision-camera-plugin-inatvision": "github:inaturalist/vision-camera-plugin-inatvision#60437a7a9c78efa2501e0009a79141b19ad347ea",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
