--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "postinstall": "husky && patch-package",
     "translate": "node src/i18n/i18ncli.js build",
     "prepare-fastlane-metadata": "node src/i18n/i18ncli.js prepare-fastlane-metadata",
-    "e2e:android": "npm run e2e:build:android && npm run  ",
-    "e2e:build:android": "MOCK_MODE=e2e npx detox build --configuration android.debug",
-    "e2e:build:ios": "MOCK_MODE=e2e npx detox build --configuration ios.debug",
+    "e2e:android": "npm run e2e:build:android && npm run e2e:test:android",
+    "e2e:build:android": "MOCK_MODE=e2e npx detox build --configuration android.release",
+    "e2e:build:ios": "MOCK_MODE=e2e npx detox build --configuration ios.release",
     "e2e:build": "npm run e2e:build:ios && npm run e2e:build:android",
     "e2e:ios": "npm run e2e:build:ios && npm run e2e:test:ios",
-    "e2e:test:android": "MOCK_MODE=e2e npx detox test --configuration android.debug",
-    "e2e:test:ios": "MOCK_MODE=e2e npx detox test --configuration ios.debug",
+    "e2e:test:android": "MOCK_MODE=e2e npx detox test --configuration android.release",
+    "e2e:test:ios": "MOCK_MODE=e2e npx detox test --configuration ios.release",
     "e2e:ios:test": "npm run e2e:test:ios",
     "e2e:ios:build": "npm run e2e:build:ios",
     "e2e:android:test": "npm run e2e:test:android",
