--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Download Android Emulator Image
       run: |
         echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --install "system-images;android-31;default;arm64-v8a"
-        echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager create avd --name Pixel_5_API_31_AOSP --device "Nexus 5X" --package 'system-images;android-31;default;arm64-v8a'
+        echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager create avd -n Pixel_5_API_31_AOSP --device "Nexus 5X" --package 'system-images;android-31;default;arm64-v8a'
         $ANDROID_HOME/emulator/emulator -list-avds
 
     - name: Cache node modules
