--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -7,11 +7,11 @@ on:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  # cancel-in-progress: true
     
 jobs:
   test:
-    runs-on: ubuntu-15
+    runs-on: macos-15
 
     steps:
     - name: Debugging 1
