try ubuntu on a lark

--- a/.github/workflows/e2e_android.yml
+++ b/.github/workflows/e2e_android.yml
@@ -11,7 +11,7 @@ concurrency:
     
 jobs:
   test:
-    runs-on: macos-15
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Debugging 1
@@ -41,10 +41,10 @@ jobs:
         path: node_modules
         key: node-modules-${{ hashFiles('**/package-lock.json') }}
   
-    - name: Rebuild detox from cache
-      if: steps.cache.outputs.cache-hit == 'true'
-      # Currently, (Detox 20) those two commands are macOS only
-      run: npx detox clean-framework-cache && npx detox build-framework-cache
+    # - name: Rebuild detox from cache
+    #   if: steps.cache.outputs.cache-hit == 'true'
+    #   # Currently, (Detox 20) those two commands are macOS only
+    #   run: npx detox clean-framework-cache && npx detox build-framework-cache
 
     # supposedly our current cache includes native modules like Realm
     # that have compiled binaries specific to the environment where they were installed
