--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,7 +109,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 180
         versionName "1.0.11"
-        setProperty("archivesBaseName", applicationId + "-v" + versionName + "+" + versionCode)
+        setProperty("archivesBaseName", applicationId)
+        // setProperty("archivesBaseName", applicationId + "-v" + versionName + "+" + versionCode)
         manifestPlaceholders = [ GMAPS_API_KEY:project.env.get("GMAPS_API_KEY") ]
         // Detox Android setup
         testBuildType System.getProperty('testBuildType', 'debug')
