workflow job dependency

--- a/.github/workflows/e2e_android_split.yml
+++ b/.github/workflows/e2e_android_split.yml
@@ -96,6 +96,7 @@ jobs:
         path: $GITHUB_WORKSPACE/android/app/build/outputs/apk/androidTest/release/org.inaturalist.iNaturalistMobile-release-androidTest.apk
 
   test:
+    needs: build
     # using intel image, android emu currently can't run on Apple Silicon
     # https://github.com/ReactiveCircus/android-emulator-runner/issues/350#issuecomment-3349718997
     runs-on: macos-15-intel
